# jumpstart-rl

./: .gitignore  LICENSE  README.md  jsrl.py  jumpstart-rl.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
examples/: eval_jsrl.py  train_guide.py  train_guide_ppo.py  train_guide_td3.py  train_jsrl.py  train_jsrl_curriculum.py  train_jsrl_on_policy.py  train_jsrl_random.py  train_scratch.py
src/jsrl/: __init__.py  jsrl.py
